# apexflow

./: .gitignore  Plan.md  README.md  bootstrap_2025.py  pyproject.toml
apexflow_dbt/: dbt_project.yml
apexflow_dbt/macros/: generate_schema_name.sql
apexflow_dbt/models/: source.yml
apexflow_dbt/models/gold/: fct_lap_leaderboard.sql
apexflow_dbt/models/silver/: fct_telemetry_enriched.sql  fct_telemetry_laps.sql
apexflow_dbt/models/staging/: stg_location.sql  stg_pits.sql  stg_race_control.sql  stg_stints.sql  stg_weather.sql
ingestors/: api_client.py  main.py  schemas.py  utils.py
